platform/kubernetes/apps/nginx/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginxapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginxapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
