platform/kubernetes/apps/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginxapp
  # A annotation foi removida daqui
spec:
  ingressClassName: traefik  # Nova forma padrão de definir o controller
  rules:
  - host: nginx.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
